# nod

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  a.out  build.rs  dune-project  dune-workspace  fact.nod  fact_opt.s  nod.opam  opam-switch.txt  tmp.nod  tmp_script.ml  tmp_show.ml  x86
.devcontainer/: Dockerfile  devcontainer.json
_build/: .db  .digest-db  log
ai_gen_background/: .#arm64_asm.txt  arm64_asm.txt  x86_asm.txt
arm64_backend/: arm64_asm.ml  arm64_backend.ml  asm_peepholes.ml  asm_peepholes.mli  common.ml  dune  emit_asm.ml  import.ml  instruction_selection.ml  lower.ml  regalloc.ml  save_clobbers.ml  x86_backend.ml
backend_common/: arch.ml  assignment.ml  backend_common.ml  calc_clobbers.ml  calc_liveness.ml  dune  gc_runtime.c  global_data.ml  import.ml  interference_graph.ml  jit_runtime.ml  jit_runtime_stubs.c  reg.ml  reg_numbering.ml  save_clobbers.ml  stack_layout.ml  util.ml
breadcrumbs/: breadcrumbs.ml  dune
clike/: ast.ml  dune  import.ml  lower.ml
clike_test/: dune  test_clike.ml
common/: dune  examples.ml  nod_error.ml  pos.mli  table.ml  token.ml  typed_var.ml
core/: .#ssa.ml  arm64_ir.ml  arm64_reg.ml  block.ml  block.mli  breadcrumbs.ml  call_block.ml  call_block.mli  cfg.ml  def_site.ml  def_site.mli  dune  eir.ml  eir0.ml  eir_opt.ml  fn_state.ml  function.ml  function.mli  function0.ml  gc_roots.ml  global.ml  graph_ir.ml  graph_ir_convert.ml  graph_ir_opt.ml  import.ml  inline.ml  instr_id.ml  instr_id.mli  instr_state.ml  ir.ml  ir0.ml  ir_builder.ml  ir_builder.mli  opt_tags.ml  opt_tags.mli  peepholes.ml  peepholes.mli  program.ml  program.mli  ssa.ml  (+16 more)
debug_opt/: dune  test_opt.ml
debug_test/: dune  ppx_fun_tmp.ml  ppx_tmp.ml  test_tmp.ml
debug_test3/: dune  test_ssa.ml
dsl/: .#dsl.ml  dsl.ml  dsl.mli  dsl_import.ml  dsl_types.ml  dsl_types.mli  dune  gen_type_repr.ml
dune.lock/: feel.pkg  lock.dune
examples/: .#examples.ml  dune  examples.ml
frontend/: dune  import.ml  lexer.ml  omm_cst.ml  omm_parser.ml  parser.ml  parser.mli  parser_comb.ml  state.ml  token_intf.ml
frontend_tools/: dune  nod_ir_lsp.ml
ir/: arm64_ir.ml  arm64_ir.mli  arm64_reg.ml  arm64_reg.mli  block_id.ml  branch.ml  branch.mli  call_block.ml  call_block.mli  dune  function.ml  import.mli  ir.ml  ir.mli  ir0.ml  ir_helpers.ml  ir_helpers.mli  lit.mli  lit_or_var.ml  lit_or_var.mli  mem.ml  mem.mli  memory_order.ml  memory_order.mli  (+6 more)
src/: bitset.ml  dune  lib.rs  pror.ml  pror_rs.ml  pror_rs.mli  solver_intf.ml  test_bitset.ml
(+506 files in other folders)
