(library
 (name nod_dsl)
 (wrapped false)
 (modules :standard \ gen_type_repr)
 (preprocess
  (pps ppx_jane ppx_nod))
 (inline_tests)
 (libraries
  core
  core_unix
  nod_frontend
  nod_core
  nod_vec
  feel
  nod_x86_backend
  nod_arm64_backend
  nod_examples)
 (flags
  (:standard -extension-universe beta)))

(rule
 (target type_repr_gen.ml)
 (deps gen_type_repr.ml)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run ocaml gen_type_repr.ml impl))))

(rule
 (target type_repr_gen.mli)
 (deps gen_type_repr.ml)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run ocaml gen_type_repr.ml intf))))
