(rule
 (targets libnod_rust.a dllnod_rust.so)
 (deps (glob_files *.rs))
 (action
  (progn
   (run sh -c "cd %{project_root}/../.. && cargo build --release")
   (run sh -c
     "mv %{project_root}/../../target/release/libnod_rust.so ./dllnod_rust.so 2> /dev/null || \
      mv %{project_root}/../../target/release/libnod_rust.dylib ./dllnod_rust.so")
   (run mv %{project_root}/../../target/release/libnod_rust.a libnod_rust.a))))

(library
 (name nod_rust)
 (foreign_archives nod_rust)
 (c_library_flags
  (-lpthread -lc -lm)))
